Redirect to https://pennylane.ai/search when viewing `search.html`

--- a/xanadu_sphinx_theme/search.html
+++ b/xanadu_sphinx_theme/search.html
@@ -1,3 +1,10 @@
+<!-- If JavaScript is enabled, redirect users to https://pennylane.ai/search.  -->
+<script type="text/javascript">
+  // TOOD: Replace contentType value with "DOC".
+  const redirect_url = "https://pennylane.ai/search?contentType=DEMO";
+  window.location.replace(redirect_url);
+</script>
+
 {%- extends "basic/search.html" %}
 
 {% block body %}
