--- a/xanadu_sphinx_theme/search.html
+++ b/xanadu_sphinx_theme/search.html
@@ -1,9 +1,18 @@
-<!-- If JavaScript is enabled, redirect users to https://pennylane.ai/search.  -->
-<script type="text/javascript">
-  // TOOD: Replace contentType value with "DOC".
-  const redirect_url = "https://pennylane.ai/search?contentType=DEMO";
-  window.location.replace(redirect_url);
-</script>
+{% if theme_search_on_pennylane_ai %}
+  <!-- If JavaScript is enabled, redirect users to https://pennylane.ai/search. -->
+  <script type="text/javascript">
+    const search_version = window.location.pathname.includes("/latest/") ? "latest" : "stable";
+    const search_query = new URLSearchParams(window.location.search).get("q")
+    // TOOD: Replace contentType value with "DOC".
+    const search_options = {contentType: "DEMO", q: search_query, version: search_version};
+
+    const redirect_page = "https://pennylane.ai/search";
+    const redirect_query_params = Object.entries(search_options).map(([k, v]) => `${k}=${v}`).join("&");
+    const redirect_url = `${redirect_page}?${redirect_query_params}`;
+
+    window.location.replace(redirect_url);
+  </script>
+{% endif %}
 
 {%- extends "basic/search.html" %}
 
