--- a/xanadu_sphinx_theme/search.html
+++ b/xanadu_sphinx_theme/search.html
@@ -2,7 +2,7 @@
   <!-- If JavaScript is enabled, redirect users to https://pennylane.ai/search. -->
   <script type="text/javascript">
     const search_version = window.location.pathname.includes("/latest/") ? "latest" : "stable";
-    const search_query = new URLSearchParams(window.location.search).get("q")
+    const search_query = new URLSearchParams(window.location.search).get("q") || "";
     const search_options = {contentType: "DOC", q: search_query, version: search_version};
 
     const redirect_page = "https://pennylane.ai/search";
