add script and pennylane-help web component instance

--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -1,3 +1,9 @@
+<!-- Command Palette WC -->
+<pennylane-help></pennylane-help>
+<!-- Command Palette Script -->
+ <script type="module" src="http://localhost:4173/assets/js/widget.js"></script>
+ <!-- <script type="module" src="https://widget.cloud.pennylane.ai/command-palette/assets/js/widget.js"></script> -->
+
 <nav>
   <!-- Logo and Title -->
 
