--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -1,9 +1,3 @@
-<!-- Command Palette WC -->
-<pennylane-help></pennylane-help>
-<!-- Command Palette Script -->
- <script type="module" src="http://localhost:4173/assets/js/widget.js"></script>
- <!-- <script type="module" src="https://widget.cloud.pennylane.ai/command-palette/assets/js/widget.js"></script> -->
-
 <nav>
   <!-- Logo and Title -->
 
@@ -202,5 +196,39 @@
           )
       }}
     {% endfor %}
+    <div id="os-label"></div>
   </ul>
 </div>
+
+<!-- Command Palette WC -->
+<pennylane-help></pennylane-help>
+
+<!-- Command Palette Script -->
+ <script type="module" src="http://localhost:4173/assets/js/widget.js"></script>
+ <!-- <script type="module" src="https://widget.cloud.pennylane.ai/command-palette/assets/js/widget.js"></script> -->
+
+<script defer>
+  /* Close on ESC keydown */
+  document.addEventListener('keydown', (event) => {
+    if (event.key === 'Escape') {
+      window.postMessage("command-palette:close", "*");
+    }
+  }); 
+
+  /* Open on Keyboard Shortcut */
+  const desktopShortcut = "Ctrl + K";
+  const macShortcut = "⌘ + K";
+
+  /* Detect User OS */
+  const isMac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
+  console.log(`User OS: ${isMac ? 'Mac' : 'Windows'}`);
+
+  /* Set OS Label */
+  const OSLabel = document.getElementById('os-label');
+  OSLabel.innerHTML = isMac ? `${macShortcut}` : `${desktopShortcut}`;
+
+  /* Open Handler */
+  function openCommandPalette() {
+    window.postMessage("command-palette:open", "*");
+  }
+</script>
