--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -216,8 +216,8 @@
   }); 
 
   /* Open on Keyboard Shortcut */
-  const desktopShortcut = "Ctrl + K";
-  const macShortcut = "⌘ + K";
+  const desktopShortcut = "Ctrl+K";
+  const macShortcut = "⌘K";
 
   /* Detect User OS */
   const isMac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
