Support search redirects to PennyLane.ai (#47)
* Pin versions in `requirements.txt` to ensure reproducible builds

* Redirect to https://pennylane.ai/search when using the search box

* Redirect to https://pennylane.ai/search when viewing `search.html`

* Revert changes to `searchbox.html` and related CSS

* Parse query parameter when redirecting from `search.html`

* Add `search_on_pennylane_ai` theme option

* Use `DOC` content type (instead of `DEMO`)

* Update changelog

* Bump package version to v0.6.0

* Add support for Python versions 3.11 and 3.12

* Trigger CI

* Address edge case where search query is empty

Co-authored-by: Andrew Gardhouse <AndrewGardhouse@gmail.com>

---------

Co-authored-by: Andrew Gardhouse <AndrewGardhouse@gmail.com>
Co-authored-by: ashishks0522 <ashish.singh@xanadu.ai>

--- a/xanadu_sphinx_theme/search.html
+++ b/xanadu_sphinx_theme/search.html
@@ -1,3 +1,18 @@
+{% if theme_search_on_pennylane_ai %}
+  <!-- If JavaScript is enabled, redirect users to https://pennylane.ai/search. -->
+  <script type="text/javascript">
+    const search_version = window.location.pathname.includes("/latest/") ? "latest" : "stable";
+    const search_query = new URLSearchParams(window.location.search).get("q") || "";
+    const search_options = {contentType: "DOC", q: search_query, version: search_version};
+
+    const redirect_page = "https://pennylane.ai/search";
+    const redirect_query_params = Object.entries(search_options).map(([k, v]) => `${k}=${v}`).join("&");
+    const redirect_url = `${redirect_page}?${redirect_query_params}`;
+
+    window.location.replace(redirect_url);
+  </script>
+{% endif %}
+
 {%- extends "basic/search.html" %}
 
 {% block body %}
