update conf and script src for testing

--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -222,9 +222,9 @@
   
   <!-- Initialize Command Palette Widget -->
   <pennylane-help></pennylane-help>
-  <!-- <script type="module" src="https://widget.dev.cloud.pennylane.ai/command-palette/assets/js/widget.js"></script> -->
+  <script type="module" src="https://widget.dev.cloud.pennylane.ai/command-palette/assets/js/widget.js"></script>
   <!-- <script type="module" src="https://widget.cloud.pennylane.ai/command-palette/assets/js/widget.js"></script> --> 
-  <script type="module" src="http://localhost:4173/assets/js/widget.js"></script>
+  <!-- <script type="module" src="http://localhost:4173/assets/js/widget.js"></script> -->
 
   <script>
     /* OS Detection */
