Embed Command Palette into `xanadu-sphinx-theme` w/ enable flag (#57)
* add script and pennylane-help web component instance

* move scripting to bottom of page

* fix labels

* create os label functionality and button

* cont' style for button

* add desktop and mobile based css

* point to prod

* remove log

* fix width css

* configure theme config for command-palette

* update conf and script src for testing

* Hide command palette on xanadu sphinx theme

* update readme

* add type to buttons, cleanup, use prod script src, update change log

* remove outline from button focus-state

--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -80,6 +80,20 @@
       {% endfor %}
     </ul>
     <ul class="navbar-right-links desktop">
+      {% if theme_command_palette_enabled %}
+        <!-- Command Palette Button - Desktop -->
+        <button 
+          type="button" 
+          class="command-palette-button desktop" 
+          onclick="openCommandPalette()" 
+          aria-label="open command palette"
+        >
+          <span>Search</span>
+          <span class="command-palette-button-shortcut">
+            <span id="os-label"></span>
+          </span>
+        </button>
+      {% endif %}
       {% for link in theme_navbar_right_links %}
         {{
           render_desktop_navbar_right_link(
@@ -167,6 +181,21 @@
 
 <div class="navbar-links mobile">
   <ul>
+    {% if theme_command_palette_enabled %}
+      <!-- Command Palette Button - Mobile -->
+      <li class="navbar-link mobile">
+        <button 
+          type="button" 
+          class="command-palette-button mobile" 
+          onclick="openCommandPalette()" 
+          aria-label="open command palette"
+        >
+          <i class="bx bx-search command-palette-button-icon"></i>
+          <span>Search</span>
+        </button>
+      </li>
+    {% endif %}
+
     {% for link in theme_navbar_left_links %}
       {{
           render_mobile_navbar_link(
@@ -198,3 +227,29 @@
     {% endfor %}
   </ul>
 </div>
+
+{% if theme_command_palette_enabled %}
+  <!-- Initialize Command Palette Widget -->
+  <pennylane-help></pennylane-help>
+  <script type="module" src="https://widget.cloud.pennylane.ai/command-palette/assets/js/widget.js"></script> 
+
+  <script type="text/javascript">
+    /* OS Detection & Shortcut Logic */
+    const isMac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
+    const desktopShortcut = "Ctrl+K";
+    const macShortcut = "⌘K";
+    const OSLabel = document.getElementById('os-label');
+    OSLabel.innerHTML = isMac ? macShortcut : desktopShortcut;
+
+    /* Open Handler */
+    function openCommandPalette() {
+      window.postMessage("command-palette:open", "*");
+    }
+    /* Close on ESC Handler */
+    document.addEventListener('keydown', (event) => {
+      if (event.key === 'Escape') {
+        window.postMessage("command-palette:close", "*");
+      }
+    });
+  </script>
+{% endif %}
