--- a/xanadu_sphinx_theme/search.html
+++ b/xanadu_sphinx_theme/search.html
@@ -2,9 +2,9 @@
   <!-- If JavaScript is enabled, redirect users to https://pennylane.ai/search. -->
   <script type="text/javascript">
     const DOC_PROJECTS = [
-      { urlPath: '/projects/catalyst/', project: 'catalyst' },
-      { urlPath: '/projects/lightning/', project: 'pennylane-lightning' },
-      { urlPath: '/projects/qiskit/', project: 'pennylane-qiskit' },
+      { urlPath: '/projects/catalyst/', projects: 'catalyst' },
+      { urlPath: '/projects/lightning/', projects: 'pennylane-lightning' },
+      { urlPath: '/projects/qiskit/', projects: 'pennylane-qiskit' },
     ]
 
     const search_version = window.location.pathname.includes("/latest/") ? "latest" : "stable";
