--- a/xanadu_sphinx_theme/search.html
+++ b/xanadu_sphinx_theme/search.html
@@ -16,7 +16,7 @@
       contentType: 'DOC',
       q: search_query,
       version: search_version,
-      project: search_project ? search_project.project : 'pennylane',
+      project: search_project ? search_project.projects : 'pennylane',
     }
 
     const redirect_page = "https://pennylane.ai/search";
