--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -26,8 +26,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.14/css/mdb.min.css">
-  <!-- NanoScroller -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.nanoscroller/0.8.7/css/nanoscroller.min.css">
+  <!-- Overlay Scrollbars -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/2.11.4/styles/overlayscrollbars.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Syntax Highlighting -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/tomorrow-night.min.css">
 
@@ -248,13 +248,14 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
-  <!-- NanoScroller -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nanoscroller/0.8.7/javascripts/jquery.nanoscroller.min.js"></script>
+  <!-- Overlay Scrollbars -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/2.11.4/overlayscrollbars.cjs.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Syntax Highlighting -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
   <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 
   <script type="text/javascript">
+
     $("a.reference.internal").each(function(){
       var link = $(this).attr("href");
 
@@ -268,7 +269,7 @@
 
     $(".document > .section").removeClass("section");
     $("h1 ~ .section").removeClass("section");
-    $(".nano").nanoScroller();
+    OverlayScrollbars(document.querySelector('.nano'), {});
   </script>
 
   <script type="text/javascript">
@@ -304,24 +305,30 @@
   </script>
 
   <script type="text/javascript">
-    if ($(".current").length) {
-      var target = $(".current")[0]
+    if (document.querySelector(".current")) {
+      var target = document.querySelector(".current");
       var rect = target.getBoundingClientRect();
       if (rect.bottom > window.innerHeight) {
-          $(".nano").nanoScroller({ scrollTo: $(".current") });
+          const nanoElement = document.querySelector(".nano");
+          const currentElement = document.querySelector(".current");
+          if (nanoElement && currentElement) {
+            nanoElement.scrollTop = currentElement.offsetTop - nanoElement.offsetTop;
+          }
       } else {
-          $(".nano").nanoScroller({ scrollTop: 0 });
+          document.querySelector(".nano").scrollTop = 0;
       }
     }
-    $(document).ready(function () {
-        $(".css-transitions-only-after-page-load").each(function (index, element) {
-            setTimeout(function () { $(element).removeClass("css-transitions-only-after-page-load") }, 10);
+    document.addEventListener('DOMContentLoaded', function () {
+        document.querySelectorAll(".css-transitions-only-after-page-load").forEach(function (element) {
+            setTimeout(function () { 
+                element.classList.remove("css-transitions-only-after-page-load"); 
+            }, 10);
         });
         if (window.location.hash) {
-          var target = $("[id='" + window.location.hash.substr(1) + "']");
-          if (target.closest(".collapse").length) {
-            target.closest(".collapse").addClass("show");
-            target.closest(".collapse").prev().find(".rotate").addClass("up");
+          var target = document.querySelector("[id='" + window.location.hash.substr(1) + "']");
+          if (target && target.closest(".collapse")) {
+            target.closest(".collapse").classList.add("show");
+            target.closest(".collapse").previousElementSibling.querySelector(".rotate").classList.add("up");
           }
         }
     });
