--- a/xanadu_sphinx_theme/localtoc.html
+++ b/xanadu_sphinx_theme/localtoc.html
@@ -5,7 +5,8 @@
         {% if display_toc %}
           <h3>Contents</h3>
           <!-- Display the ToC for the current document if it is not empty. -->
-          {{ toctree(maxdepth=1, collapse=True, includehidden=True) }}
+          {{ toctree(maxdepth=1, collapse=True, includehidden=True) | replace("<li>", "<li class='current'>")
+                 | replace("<ul>", "<ul class='current'>")}}
         {% elif theme_toc_subset %}
           <h3>Contents</h3>
           <!-- Display the ToC for a subset of the current document tree. -->
