--- a/xanadu_sphinx_theme/localtoc.html
+++ b/xanadu_sphinx_theme/localtoc.html
@@ -5,12 +5,12 @@
         {% if display_toc %}
           <h3>Contents</h3>
           <!-- Display the ToC for the current document if it is not empty. -->
-          <!-- {{ toctree | replace("<li>", "<li class='current'>")
-                 | replace("<ul>", "<ul class='current'>")}} -->
+          {{ toc | replace("<li>", "<li class='current'>")
+                 | replace("<ul>", "<ul class='current'>")}}
         {% elif theme_toc_subset %}
           <h3>Contents</h3>
           <!-- Display the ToC for a subset of the current document tree. -->
-          {{ toctree(maxdepth=3, collapse=True, includehidden=True) }}
+          {{ toc(maxdepth=3, collapse=True, includehidden=True) }}
         {% endif %}
     </div>
 
