--- a/xanadu_sphinx_theme/localtoc.html
+++ b/xanadu_sphinx_theme/localtoc.html
@@ -10,7 +10,7 @@
         {% elif theme_toc_subset %}
           <h3>Contents</h3>
           <!-- Display the ToC for a subset of the current document tree. -->
-          {{ toc(maxdepth=3, collapse=True, includehidden=True) }}
+          {{ toctree(maxdepth=3, collapse=True, includehidden=True) }}
         {% endif %}
     </div>
 
