--- a/xanadu_sphinx_theme/localtoc.html
+++ b/xanadu_sphinx_theme/localtoc.html
@@ -2,7 +2,16 @@
 <div class="localtoc-container nano has-scrollbar">
   <div class="nano-content">
     <div id="localtoc">
-      {{ toctree(maxdepth=3, collapse=True, includehidden=True) }}
+        {% if display_toc %}
+          <h3>Contents</h3>
+          <!-- Display the ToC for the current document if it is not empty. -->
+          {{ toc | replace("<li>", "<li class='current'>")
+                 | replace("<ul>", "<ul class='current'>")}}
+        {% elif theme_toc_subset %}
+          <h3>Contents</h3>
+          <!-- Display the ToC for a subset of the current document tree. -->
+          {{ toctree(maxdepth=3, collapse=True, includehidden=True) }}
+        {% endif %}
     </div>
 
     <div class="xanadu-call-to-action-links">
