--- a/xanadu_sphinx_theme/header.html
+++ b/xanadu_sphinx_theme/header.html
@@ -132,9 +132,8 @@
       {% endif %}
       <div class="navbar-dropdown mobile">
         <ul>
-          {% if dropdown %}
+          {% if dropdown and href %}
             <li>
-              {% if href %}
                 <a href="{{ pathto(href, 1) }}" {% if external %} target="_blank" {% endif %}>
                   {%- if name -%}
                     {{ name }}
@@ -143,7 +142,6 @@
                     <i class='bx bx-arrow-out-up-right-square'></i> 
                   {% endif %}
                 </a>
-              {% endif %}
             </li>
           {% endif %}
           {% for link in dropdown %}
